force-app/main/default/objects/Contract_Link__c/Contract_Link__c.object-meta.xml
<CustomObject>
    <label>Contract Link</label>
    <nameField>
        <label>Contract Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>