force-app/main/default/objects/Contract_Link__c/fields/Age_at_Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>Age_at_Enrollment_Date__c</fullName>
    <formula>floor ((Enrollment_Date__c - Case_Record__r.Main_Client__r.Birthdate)/365)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age at Enrollment Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>