force-app/main/default/objects/Contract_Link__c/fields/Amount_Billed__c.field-meta.xml
<CustomField>
    <fullName>Amount_Billed__c</fullName>
    <label>Amount Billed</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>