force-app/main/default/objects/Contract_Link__c/fields/Case_Record__c.field-meta.xml
<CustomField>
    <fullName>Case_Record__c</fullName>
    <label>Case Record</label>
    <referenceTo>Case_Record__c</referenceTo>
    <relationshipLabel>Contract Links</relationshipLabel>
    <relationshipName>Contract_Links</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>