force-app/main/default/objects/Contract_Link__c/fields/Contract_Priority_Rank__c.field-meta.xml
<CustomField>
    <fullName>Contract_Priority_Rank__c</fullName>
    <formula>Grant_Contract__r.Priority_Rank__c</formula>
    <label>Contract Priority Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>