force-app/main/default/objects/Contract_Link__c/fields/Date_Billed__c.field-meta.xml
<CustomField>
    <fullName>Date_Billed__c</fullName>
    <label>Date Billed</label>
    <type>Date</type>
</CustomField>