force-app/main/default/objects/Contract_Link__c/fields/Employment__c.field-meta.xml
<CustomField>
    <fullName>Employment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employment</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Contract Links</relationshipLabel>
    <relationshipName>Contract_Links</relationshipName>
    <type>Lookup</type>
</CustomField>