force-app/main/default/objects/Contract_Link__c/fields/Employment_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Employment_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employment Milestone</label>
    <referenceTo>Placement_Milestone__c</referenceTo>
    <relationshipLabel>Contract Links</relationshipLabel>
    <relationshipName>Contract_Links</relationshipName>
    <type>Lookup</type>
</CustomField>