force-app/main/default/objects/Contract_Link__c/fields/Enrollment_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Completion_Date__c</fullName>
    <description>Date the enrollment process was completed for the Contract Link record.</description>
    <label>Enrollment Completion Date</label>
    <type>Date</type>
</CustomField>