force-app/main/default/objects/Contract_Link__c/fields/Enrollment_Status__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Status__c</fullName>
    <description>Formula for better reporting on grant enrollment status.</description>
    <formula>IF(Prospect_Only__c, &quot;Prospect&quot;, &quot;Enrolled&quot;)</formula>
    <label>Enrollment Status</label>
    <type>Text</type>
</CustomField>