force-app/main/default/objects/Contract_Link__c/fields/Funder_Approved__c.field-meta.xml
<CustomField>
    <fullName>Funder_Approved__c</fullName>
    <inlineHelpText>REDF only</inlineHelpText>
    <label>Funder Approved</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>