force-app/main/default/objects/Contract_Link__c/fields/Grant_Category__c.field-meta.xml
<CustomField>
    <fullName>Grant_Category__c</fullName>
    <inlineHelpText>CFW only.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First-Time Placement/Re-Placement</fullName>
            </value>
            <value>
                <fullName>Advancement Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>