force-app/main/default/objects/Contract_Link__c/fields/Grant_Contract__c.field-meta.xml
<CustomField>
    <fullName>Grant_Contract__c</fullName>
    <label>Grant/Contract</label>
    <referenceTo>Agency_Contract1__c</referenceTo>
    <relationshipLabel>Contract Links</relationshipLabel>
    <relationshipName>Contract_Links</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>