force-app/main/default/objects/Contract_Link__c/fields/Grant_Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Grant_Contract_Start_Date__c</fullName>
    <description>Start date from Grant/Contract record.</description>
    <formula>Grant_Contract__r.Grant_Contract_Start_Date__c</formula>
    <label>Grant/Contract Start Date</label>
    <type>Date</type>
</CustomField>