force-app/main/default/objects/Contract_Link__c/fields/Grant_Contract_Studentforce_Import_ID__c.field-meta.xml
<CustomField>
    <fullName>Grant_Contract_Studentforce_Import_ID__c</fullName>
    <label>Grant/Contract Studentforce Import ID</label>
    <length>4</length>
    <type>Text</type>
</CustomField>