force-app/main/default/objects/Contract_Link__c/fields/Hours_Met_Date__c.field-meta.xml
<CustomField>
    <fullName>Hours_Met_Date__c</fullName>
    <inlineHelpText>REDF only: Date when participant met 32 hours of work in social enterprise job.</inlineHelpText>
    <label>Hours Met Date</label>
    <type>Date</type>
</CustomField>