force-app/main/default/objects/Contract_Link__c/fields/Legacy_Grant_Types_ID_Access__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Grant_Types_ID_Access__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Grant Types ID (Access)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>