force-app/main/default/objects/Contract_Link__c/fields/Paycom_File_Number__c.field-meta.xml
<CustomField>
    <fullName>Paycom_File_Number__c</fullName>
    <formula>Case_Record__r.Main_Client__r.ADP_File_Number__c</formula>
    <label>Paycom File Number</label>
    <type>Text</type>
</CustomField>