force-app/main/default/objects/Contract_Link__c/fields/Prospect_Only__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prospect Only</label>
    <type>Checkbox</type>
</CustomField>