force-app/main/default/objects/Contract_Link__c/fields/Service_Entry__c.field-meta.xml
<CustomField>
    <fullName>Service_Entry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Entry</label>
    <referenceTo>Client_Session__c</referenceTo>
    <relationshipLabel>Contract Links</relationshipLabel>
    <relationshipName>Contract_Links</relationshipName>
    <type>Lookup</type>
</CustomField>