force-app/main/default/objects/Contract_Link__c/fields/Total_Expenses_Billed__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses_Billed__c</fullName>
    <inlineHelpText>Will autosum based on Contract Expenses inputted.</inlineHelpText>
    <label>Total Expenses Billed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>