force-app/main/default/objects/Contract_Link__c/recordTypes/Activity_Assignment.recordType-meta.xml
<RecordType>
    <fullName>Activity_Assignment</fullName>
    <active>true</active>
    <label>Activity Assignment</label>
</RecordType>