force-app/main/default/objects/Contract_Link__c/recordTypes/Student_Assignment.recordType-meta.xml
<RecordType>
    <fullName>Student_Assignment</fullName>
    <active>true</active>
    <label>Student Assignment</label>
</RecordType>