force-app/main/default/objects/Contract_Link__c/validationRules/Application_Date_Non_CDBG_or_CSBG.validationRule-meta.xml
<ValidationRule>
    <fullName>Application_Date_Non_CDBG_or_CSBG</fullName>
    <active>true</active>
    <errorConditionFormula>not (isblank (Application_Date__c)) 

&amp;&amp;

not(contains(Grant_Contract__r.Name, &quot;CDBG&quot;))

&amp;&amp;

not(contains(Grant_Contract__r.Name, &quot;CSBG&quot;))</errorConditionFormula>
    <errorMessage>&apos;Application Date&apos; is only applicable for CDBG and CSBG Contract Links.</errorMessage>
</ValidationRule>