force-app/main/default/objects/Contract_Link__c/validationRules/Approval_and_Hours_Met_Date_Non_REDF.validationRule-meta.xml
<ValidationRule>
    <fullName>Approval_and_Hours_Met_Date_Non_REDF</fullName>
    <active>true</active>
    <errorConditionFormula>(not (isblank (text (Funder_Approved__c))) || not (isblank (Hours_Met_Date__c))) &amp;&amp; not(contains (Grant_Contract__r.Name, &quot;REDF&quot;))</errorConditionFormula>
    <errorMessage>&apos;Funder Approved&apos; and &apos;Hours Met Date&apos; are only applicable for REDF Contract Links.</errorMessage>
</ValidationRule>