force-app/main/default/objects/Contract_Link__c/validationRules/Contract_Cannot_Be_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Cannot_Be_Changed</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Grant_Contract__c )</errorConditionFormula>
    <errorMessage>The Grant/Contract field cannot be changed after creation. If created in error, please create a new Contract Link and submit a help desk ticket to delete the old one.</errorMessage>
</ValidationRule>