force-app/main/default/objects/Contract_Link__c/validationRules/Enrollment_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Enrollment_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Enrollment_Date__c &gt;  Grant_Contract__r.Grant_Contract_End_Date__c 

||

Enrollment_Date__c &lt;
Grant_Contract__r.Grant_Contract_Start_Date__c</errorConditionFormula>
    <errorMessage>The Enrollment Date does not fall within the Grant/Contract start/end terms. Please verify that you are enrolling in the correct grant.</errorMessage>
</ValidationRule>