force-app/main/default/objects/Contract_Link__c/validationRules/Placement_Milestone_must_equal_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>Placement_Milestone_must_equal_Case</fullName>
    <active>true</active>
    <description>Ensures Placement selected is related to the selected Case Record</description>
    <errorConditionFormula>NOT(ISBLANK(Case_Record__c)) &amp;&amp; NOT(ISBLANK( Employment_Milestone__c )) &amp;&amp; Case_Record__r.Id !=  Employment_Milestone__r.Case_Record_ID__c</errorConditionFormula>
    <errorMessage>Placement Milestone Case Record must equal the selected Case Record</errorMessage>
</ValidationRule>