force-app/main/default/objects/Contract_Link__c/validationRules/Placement_must_be_related_to_Case_Record.validationRule-meta.xml
<ValidationRule>
    <fullName>Placement_must_be_related_to_Case_Record</fullName>
    <active>true</active>
    <description>Ensures Placement selected is related to the selected Case Record</description>
    <errorConditionFormula>NOT(ISBLANK(Case_Record__c)) &amp;&amp; NOT(ISBLANK(Employment__c)) &amp;&amp; Case_Record__r.Id != Employment__r.Case_Record__r.Id</errorConditionFormula>
    <errorMessage>Placement Case Record must equal the selected Case Record</errorMessage>
</ValidationRule>